# gccxml

./: .gitignore  CMakeLists.txt  LICENSE.rst  README.rst  TODO  VERSION
GCC/: CMakeLists.txt
GCC/config_cmake/: CMakeLists.txt  auto-host.h.in  today.cmake
GCC/gcc/: CMakeLists.txt  Makefile.in  diagnostic.c  genchecksum.c  gengtype-lex.c  gengtype.c  incpath.c  system.h  tree.h
GCC/gcc/c-family/: c-common.c  c-opts.c  c.opt
GCC/gcc/config/i386/: linux64.h  t-linux64
GCC/gcc/cp/: CMakeLists.txt  class.c  cp-tree.h  decl2.c  mangle.c  name-lookup.h  xml.c
GCC/gccxml-plugin/: CMakeLists.txt
GCC/gccxml-plugin/Testing/: CMakeLists.txt
GCC/gccxml-plugin/plugin/: CMakeLists.txt  xml.c
GCC/libcpp/: files.c  internal.h
GCC/libiberty/: CMakeLists.txt  Makefile.in
gccxml-plugin/: CMakeLists.txt
gccxml-plugin/Testing/: CMakeLists.txt
gccxml-plugin/plugin/: CMakeLists.txt  gccxml_plugin.c  gccxml_plugin.h  xml.c
scripts/: gccxml_plugin
